--- a/ball.html
+++ b/ball.html
@@ -8,6 +8,7 @@
             margin: 0;
             width: 100%;
             height: 100%;
+            overflow: none;
         }
         #main {
             position: absolute;
@@ -37,6 +38,31 @@
     </div>
     <script type = 'text/javascript'>
         // make the ball move
+        var x = 0;
+        var dx = 5;
+        var y = 0;
+        var dy = 5;
+        var ball = document.getElementById('ball');
+        setInterval(function () {
+            ball.style.top = y + 'px';
+            ball.style.left = x + 'px';
+            x += dx;
+            y += dy;
+            if (y + 50 > window.innerHeight) {
+                dy *= -1;
+                y = window.innerHeight - 51;
+            } else if (y < 0) {
+                dy *= -1;
+                y = 1;
+            }
+            if (x + 50 > window.innerWidth) {
+                dx *= -1;
+                x = window.innerWidth - 51;
+            } else if (x < 0) {
+                dx *= -1;
+                x = 1;
+            }
+        }, 20);
     </script>
 </body>
 </html>
